objects/Fees_record__c.object
<CustomObject>
    <label>Fees record</label>
    <nameField>
        <displayFormat>FR-{0000}</displayFormat>
        <label>Fees record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>ROLL_NO__c</fullName>
        <label>ROLL NO</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Class_Student__c</fullName>
        <label>Class Student</label>
        <referenceTo>Class_Student__c</referenceTo>
        <relationshipLabel>Fees records</relationshipLabel>
        <relationshipName>Fees_records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_fee_paid__c</fullName>
        <label>Total fee paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>